Better error message for timeseries assertion

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2022-05-30
    • 57
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, there are 3 places that says "Namespace x.y is a timeseries collection".

      https://github.com/10gen/mongo/blob/883238375b56d7a4a11f48583a5f79a5f7192d87/src/mongo/db/catalog_raii.cpp#L303
      https://github.com/10gen/mongo/blob/883238375b56d7a4a11f48583a5f79a5f7192d87/src/mongo/db/catalog_raii.cpp#L434
      https://github.com/10gen/mongo/blob/883238375b56d7a4a11f48583a5f79a5f7192d87/src/mongo/db/commands/run_aggregate.cpp#L765

      Suggestion:

      • Reword error in catalog_raii as "Taking x.y lock for timeseries not allowed"
      • Reword error in run_aggregate as "Cannot run aggregation on timeseries ns x.y"

            Assignee:
            Fausto Leyva (Inactive)
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: