SERVER-66266 Better error message for timeseries assertion